[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-traffic-env"
version = "1.0.0"
description = "Smart Traffic Optimization Environment OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio==6.10.0",
    "matplotlib==3.8.4",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pyyaml==6.0.2",
    "fastapi>=0.115.2",
    "uvicorn==0.30.6",
    "openai>=2.8.2",
    "pydantic==2.9.2",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest"
]
